--- a/TidyTrafficVolumeData.Rmd
+++ b/TidyTrafficVolumeData.Rmd
@@ -21,10 +21,12 @@ dataCreated <- date()
 #install.packages("lubridate")
 #install.packages("foreign")
 #install.packages("compareDF")
+#install.packages("partitions")
 library(tidyverse)
 library(lubridate)
 library(foreign)
 library(compareDF)
+library(partitions)
 
 volumeData <- read_csv("./data/TrafficVolume/nycTrafficVolume2014-2019.csv",col_types = cols(  Date = col_date(format="%m/%d/%Y")))
 volumeData <- volumeData
@@ -155,27 +157,193 @@ myresult<-mutate(observations2019,Date = as_date(update(Date,year=2020)))%>%
 write_csv(myresult,"./data/output_tests/my_data.gzip")
 
 #separating by dates
-
+m<-m[sample(nrow(m),size=1000,replace=FALSE),]
 valid_dates<- unique(myresult$Date)
 for(i in seq_along(valid_dates)){
   print(valid_dates[i])
   print(paste("./data/output_tests/daily/",valid_dates[i],".csv",sep=""))
-  write_csv(filter(myresult,Date == instance),paste("./data/output_tests/daily/",valid_dates[i],".csv",sep=""))
+  write_csv(filter(myresult,Date == valid_dates[i]),paste("./data/output_tests/daily/",valid_dates[i],".csv",sep=""))
 }
 ```
-Criando teste multiperiodo primeiro vamos criar id's unicos para Segemnto por direção
+Criando teste multiperiodo primeiro vamos criar id's unicos para Segemnto por direção e borough. Verificar novo agrupamento
 ```{r}
 library(sqldf)
-myresult<-myresult %>% mutate(newID=group_indices(.,`Segment ID`,Direction))
+#gives a warning but the result is the same as using group_by before and cur_group_id in mutate without grouping
+myresult<-myresult %>% mutate(newID=group_indices(.,`Segment ID`,Direction,Borough))
 sqlStmt <- "select Date, count(distinct newID) from myresult group by Date"
-sqldf(sqlStmt)
-myresult %>% select(c("Roadway Name","From","To","newID")) %>% arrange(newID) %>% distinct
+interval_candidates<-sqldf(sqlStmt)
 
 ```
 
-
+Trying to find good candidates for multiperiod
 ```{r}
-idtable<-myresult %>% select(c("Roadway Name","From","To","newID")) %>% arrange(newID) %>% distinct
-```
+validationidtable<-myresult %>% select(c("Roadway Name","From","To","newID")) %>% arrange(newID) %>% distinct
+#interval from 21-09 to 27-09 total of 7 days
+interval1<-filter(myresult,month(Date)==9&(day(Date)<=27&day(Date)>=21)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+#interval from 28-09 to 29-09 total of 2 days
+interval2<-filter(myresult,month(Date)==9&(day(Date)<=29&day(Date)>=28)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+#interval from 30-09 to 04-10 total of 5 days
+interval3<-filter(myresult,(month(Date)==9&day(Date)==30)|(month(Date)==10&(day(Date)<=4&day(Date)>=1))) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval4<-filter(myresult,month(Date)==10&(day(Date)<=6&day(Date)>=5)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval5<-filter(myresult,month(Date)==10&(day(Date)<=11&day(Date)>=7)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval6<-filter(myresult,month(Date)==10&(day(Date)<=13&day(Date)>=12)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval7<-filter(myresult,month(Date)==10&(day(Date)<=18&day(Date)>=14)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval8<-filter(myresult,month(Date)==10&(day(Date)<=20&day(Date)>=19)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval9<-filter(myresult,month(Date)==10&(day(Date)<=27&day(Date)>=21)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval10<-filter(myresult,month(Date)==11&(day(Date)<=8&day(Date)>=2)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval11<-filter(myresult,month(Date)==11&(day(Date)<=10&day(Date)>=9)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval12<-filter(myresult,month(Date)==11&(day(Date)<=15&day(Date)>=11)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval13<-filter(myresult,month(Date)==11&(day(Date)<=17&day(Date)>=16)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
+interval14<-filter(myresult,month(Date)==11&(day(Date)<=24&day(Date)>=18)) %>% select(Date,newID) %>% distinct %>% group_by(newID) %>% summarise(count = n()) %>% select(count) %>% distinct
 
+
+```
+Vamos gerar uma escala de trabalho dentro de 24 horas.
+```{r}
+#m will helpe me to divide my teams by groups
+m<- partitions::compositions(12, 12)
+m<-t(as.matrix(m))
+# we need divide 12 types of schedules by the size than use function to create our team schedule
+
+# lets create a function thats take the number of teams k ,number of intervals of 24 hours n, number of locations and partition division p 
+create_instance <-function(k,n,my_instance,instance_partition,p){
+  number_of_locations<- my_instance %>% select(newID) %>% unique %>% nrow
+  tempo_total<- 24*n
+  #final output mantains the full schedule of the instance
+  mapa_viabilidade<-array(0,dim=c(k, number_of_locations,tempo_total))
+  #array with viable Borough codes
+  viable_districts<-  (my_instance %>% select(Borough) %>% unique)$Borough
+  resto <- k
+  idx_equipe_atual <- 1
+  size<- length(instance_partition)
+  for(m in 1:size){
+        if(instance_partition[m]==0) next;
+        quantidade_equipes<-floor((instance_partition[m]/size)*k)
+        if(quantidade_equipes ==0) next
+        for(curr_team in 1:quantidade_equipes){
+            #Full location schedule
+            if(m <= 4){
+                #separates in periods t of 24 hours
+                for(t in 0:(n-1)){
+                  for(j in 1:24){
+                    if(m==1){
+                       if((j>8&&j<=12)||(j>13&&j<=18)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-rep(1,number_of_locations)
+                       }
+                    }else if(m==2){
+                       if((j>6&&j<=12)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-rep(1,number_of_locations)
+                       }
+                    }else if(m==3){
+                       if((j>22&&j<=24)||(j>=1&&j<=5)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-rep(1,number_of_locations)
+                       }
+                    }else if(m==4){
+                      if(rbinom(1,1,0.5)==1)mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-rep(1,number_of_locations)
+                    }
+                   }
+                }
+                idx_equipe_atual <- idx_equipe_atual + 1
+            }else if(m<=8){#Neighboardhood limited location
+                  #lets map team to districts
+                  sorteio_location<-sample(viable_districts, size= 1,replace=TRUE)
+                  #create a array 0 or 1 based in  locations inside a Borough that was randomly draw
+                  solution<- as.numeric((my_instance %>% select(Borough,newID) %>% unique %>% arrange(newID))$Borough == sorteio_location)
+                  #separates in periods t of 24 hours
+                  for(t in 0:(n-1)){
+                  for(j in 1:24){
+                    if(m==5){
+                       if((j>8&&j<=12)||(j>13&&j<=18)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-solution
+                       }
+                    }else if(m==6){
+                       if((j>6&&j<=12)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-solution
+                       }
+                    }else if(m==7){
+                       if((j>22&&j<=24)||(j>=1&&j<=5)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-solution
+                       }
+                    }else if(m==8){
+                      #randomly choose its time
+                      if(rbinom(1,1,0.5)==1)mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-solution
+                    }
+                  }
+                 }
+                idx_equipe_atual <- idx_equipe_atual + 1
+            }else if(m<=12){#Random location let's limit to 50% probability by location
+                 #randomly choose locations and associate to sorteio
+                 sorteio<-rbinom(number_of_locations,1,p)
+                 #separates in periods t of 24 hours
+                 for(t in 0:(n-1)){
+                  for(j in 1:24){
+                    if(m==9){
+                       if((j>8&&j<=12)||(j>13&&j<=18)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-sorteio
+                       }
+                    }else if(m==10){
+                       if((j>6&&j<=12)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-sorteio
+                       }
+                    }else if(m==11){
+                       if((j>22&&j<=24)||(j>=1&&j<=5)){
+                           mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-sorteio
+                       }
+                    }else if(m==12){
+                      if(rbinom(1,1,0.5)==1)mapa_viabilidade[idx_equipe_atual,,(24*t)+j]<-sorteio
+                    }
+                  }
+                 }
+                idx_equipe_atual <- idx_equipe_atual + 1
+            }else{
+              print("erro tamanho particionamento equipe.")
+            }
+        }
+  }
+  #allocates remanining teams
+  while(idx_equipe_atual <= k){
+    print("resto alocado")
+    for(t in 1:tempo_total) mapa_viabilidade[idx_equipe_atual,,t]<-rbinom(number_of_locations,1,0.5)
+    idx_equipe_atual <- idx_equipe_atual + 1
+  }
+  mapa_viabilidade
+}
+
+
+```
+Vamos criar as instancias em arquivos
+```{r}
+#vamos criar as instâncias densidade fixa 30%
+meus_ks <- c(0.30) #completar depois com c(0.01,0.05,0.1,0.15,0.20,0.25)
+meus_ps <- c(0.5) # completar depois com c(0.25,0.5,0.75)
+
+#lets change so that m is smaller 
+
+my_daily_periods <- c()
+for(k in meus_ks){
+  for(p in meus_ps){
+    for(i in seq_along(valid_dates)){
+      number_of_locations<- filter(myresult,Date == valid_dates[i]) %>% select(newID) %>% unique %>% nrow
+      print(valid_dates[i])
+      if(number_of_locations!=10) next #just instances with 10 points
+      #iterate through partitions
+      for(partition in 1:nrow(m)){
+         st<-paste("./data/output_tests/new_instances/",paste(valid_dates[i],k*100,p*100,number_of_locations,paste(m[partiion,],collapse = "-"),sep = "-"),".gzip",sep="")
+       print(st)
+       #create instance
+       ts<-create_instance(number_of_locations*k,1,filter(myresult,Date == valid_dates[i]),m[partition,],p)
+       n3 <- dim(ts)[3]
+       #change 3d array to table with column with the times and write to gzip
+       mp<-lapply(1:n3, function (i) ts[,,i]) %>%
+       imap_dfr(function(mtx, i) {
+           as.data.frame(mtx) %>%
+           mutate(table = paste("time", i, sep = "_"))
+        })
+       write_csv(mp,st)
+      }
+    }
+  }
+}
+
+```
 
